# The following is the shared configuration for both pueue and its lib
[workspace]
members = ["pueue", "pueue_lib"]
resolver = "2"

[workspace.package]
authors = ["Arne Beer <contact@arne.beer>"]
edition = "2021"
homepage = "https://github.com/nukesor/pueue"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nukesor/pueue"
rust-version = "1.70"

[workspace.dependencies]
anyhow = "1"
better-panic = "0.3"
chrono = { version = "0.4", features = ["serde"] }
command-group = "5"
handlebars = "5.1"
log = "0.4"
pretty_assertions = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
snap = "1.1"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.43", features = ["io-std", "rt-multi-thread", "time"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
