[package]
name = "pueue-lib"
description = "The shared library to work with the Pueue client and daemon."
version = "0.21.0"
authors = ["Arne Beer <contact@arne.beer>"]
homepage = "https://github.com/nukesor/pueue"
repository = "https://github.com/nukesor/pueue"
documentation = "https://docs.rs/pueue"
license = "MIT"
keywords = ["shell", "command", "parallel", "task", "queue"]
readme = "README.md"
rust-version = "1.58"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1"
async-trait = "0.1"
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "4"
log = "0.4"
rand = "0.8"
rcgen = "0.9"
rev_buf_reader = "0.3"
rustls = "0.20"
rustls-pemfile = "1"
serde = "1"
serde_cbor = "0.11"
serde_json = "1"
serde_yaml = "0.9"
serde_derive = "1"
shellexpand = "2.1"
snap = "1"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"
tokio = { version = "1", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "io-util",
] }
tokio-rustls = "0.23"

[dev-dependencies]
anyhow = "1"
better-panic = "0.3"
pretty_assertions = "1"
portpicker = "0.1"
tempdir = "0.3"
tokio = { version = "1", features = [ "time" ] }

# --- Platform specific dependencies ---
# Windows
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "tlhelp32",
  "handleapi",
  "processthreadsapi",
  "minwindef",
  "impl-default",
] }

# Unix
[target.'cfg(not(windows))'.dependencies]
nix = "0.24"
whoami = "1"

# Linux / Freebsd
[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
procfs = { version = "0.12", default-features = false }
