[package]
name = "pueue-lib"
version = "0.21.0"
description = "The shared library to work with the Pueue client and daemon."
keywords = ["pueue"]
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1"
async-trait = "0.1"
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "4"
rand = "0.8"
rcgen = "0.9"
rev_buf_reader = "0.3"
rustls = "0.20"
rustls-pemfile = "1"
serde_cbor = "0.11"
serde_yaml = "0.9"
shellexpand = "2.1"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"
tokio-rustls = "0.23"

log = { workspace = true }
snap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "io-util"] }

[dev-dependencies]
anyhow = "1"
better-panic = "0.3"
pretty_assertions = "1"
portpicker = "0.1"
tempdir = "0.3"
tokio = { version = "1", features = ["time"] }

# --- Platform specific dependencies ---
# Windows
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "tlhelp32",
  "handleapi",
  "processthreadsapi",
  "minwindef",
  "impl-default",
] }

# Unix
[target.'cfg(not(windows))'.dependencies]
nix = "0.24"
whoami = "1"

# Linux / Freebsd
[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
procfs = { version = "0.14", default-features = false }
