[package]
name = "pueue-lib"
version = "0.21.0"
description = "The shared library to work with the Pueue client and daemon."
keywords = ["pueue"]
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1"
async-trait = "0.1"
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "4"
rand = "0.8"
rcgen = "0.9"
rev_buf_reader = "0.3"
rustls = "0.20"
rustls-pemfile = "1"
serde_cbor = "0.11"
serde_yaml = "0.9"
shellexpand = "2.1"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"
tokio-rustls = "0.23"

command-group = { workspace = true }
log = { workspace = true }
snap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "io-util"] }

[dev-dependencies]
anyhow = "1"
better-panic = "0.3"
pretty_assertions = "1"
portpicker = "0.1"
tempdir = "0.3"
tokio = { version = "1", features = ["time"] }

# --- Platform specific dependencies ---
# Windows
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "tlhelp32",
  "handleapi",
  "processthreadsapi",
  "minwindef",
  "impl-default",
] }

# Unix
[target.'cfg(unix)'.dependencies]
whoami = "1"

# Linux only
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.14.1"

# Apple only
[target.'cfg(target_vendor = "apple")'.dependencies]
libproc = "0.12.0"

[target.'cfg(target_vendor = "apple")'.dev-dependencies]
# fork that fixes a version conflict, see heim-rs/darwin-libproc#3
# only used as a test dependency.
darwin-libproc = { version="0.2.0", git = "https://github.com/jamwaffles/darwin-libproc.git", rev = "cbd571e4be87a6603de328d1f1f0ad54d7bdfedf" }
