[package]
name = "pueue-lib"
description = "The shared library to work with the Pueue client and daemon."
version = "0.11.1"
authors = ["Arne Beer <contact@arne.beer>"]
homepage = "https://github.com/nukesor/pueue"
repository = "https://github.com/nukesor/pueue"
documentation = "https://docs.rs/pueue/"
license = "MIT"
keywords = ["shell", "command", "parallel", "task", "queue"]
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1"
dirs = "3"
chrono = { version = "^0.4", features = ["serde"] }
rand = "^0.8"
strum_macros = "^0.20"

async-std = { version = "1", features = ["attributes", "std"] }
async-tls = "0.11"
async-trait = "0.1"
rustls = "0.19"
rev_lines = "0.2"
rcgen = "0.8"
byteorder = "^1"
snap = "1"
serde = "^1.0"
bincode = "^1.2"
serde_json = "^1.0"
serde_yaml = "^0.8"
serde_derive = "^1.0"

config = { version = "^0.10", default-features = false, features = ["yaml"] }
log = "0.4"

[target.'cfg(not(windows))'.dependencies]
users = "^0.11"
