[package]
name = "pueue-lib"
version = "0.27.0"
description = "The shared library to work with the Pueue client and daemon."
readme = "README.md"
keywords = ["pueue"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
byteorder = "1.5"
chrono.workspace = true
command-group.workspace = true
dirs = "5.0"
handlebars.workspace = true
log.workspace = true
rand = "0.8"
rcgen = "0.13"
rev_buf_reader = "0.3"
rustls = { version = "0.23", features = [
    "logging",
    "ring",
    "std",
    "tls12",
], default-features = false }
rustls-pemfile = "2"
serde.workspace = true
serde_cbor = "0.11"
serde_json.workspace = true
serde_yaml = "0.9"
shellexpand = "3.1"
snap.workspace = true
strum.workspace = true
thiserror = "2"
tokio = { workspace = true, features = ["io-util", "macros", "net"] }
tokio-rustls = { version = "0.26", default-features = false }

[dev-dependencies]
anyhow.workspace = true
better-panic.workspace = true
portpicker = "0.1"
pretty_assertions.workspace = true
tempfile = "3"
tokio.workspace = true

# --- Platform specific dependencies ---
# Windows
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "errhandlingapi",
    "impl-default",
    "minwindef",
    "processthreadsapi",
    "tlhelp32",
] }

# Unix
[target.'cfg(unix)'.dependencies]
whoami = "1"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libproc = "0.14.8"

# Linux only
[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17", default-features = false }
