[package]
name = "pueue-lib"
version = "0.29.0"
description = "The shared library to work with the Pueue client and daemon."
readme = "README.md"
keywords = ["pueue"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[features]
# Client needs the `network` or `network_blocking` feature to do anything.
client = ["dep:color-eyre"]
default = ["log", "network", "network_blocking", "settings"]
log = ["dep:rev_buf_reader", "dep:snap"]
network = [
    "dep:async-trait",
    "dep:byteorder",
    "dep:ciborium",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:tokio",
    "dep:tokio-rustls",
    "secret",
    "tls",
]
network_blocking = [
    "dep:byteorder",
    "dep:ciborium",
    "dep:rustls",
    "dep:rustls-connector",
    "dep:rustls-pemfile",
    "secret",
    "tls",
]
secret = ["dep:rand"]
settings = ["dep:dirs", "dep:serde_yaml", "dep:shellexpand"]
tls = ["dep:rustls"]

[dependencies]
async-trait = { workspace = true, optional = true }
byteorder = { version = "1.5", optional = true }
chrono.workspace = true
ciborium = { workspace = true, optional = true }
color-eyre = { workspace = true, optional = true }
dirs = { version = "6.0", optional = true }
rand = { version = "0.9", optional = true }
rev_buf_reader = { version = "0.3", optional = true }
rustls = { workspace = true, optional = true }
rustls-connector = { version = "0.21", default-features = false, optional = true, features = [
    "rustls--ring",
] }
rustls-pemfile = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml = { version = "0.9", optional = true }
shellexpand = { version = "3.1", optional = true }
snap = { workspace = true, optional = true }
strum.workspace = true
thiserror = "2"
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "net",
], optional = true }
tokio-rustls = { workspace = true, optional = true }
tracing.workspace = true

[dev-dependencies]
better-panic.workspace = true
color-eyre.workspace = true
portpicker = "0.1"
pretty_assertions.workspace = true
tempfile = "3"
tokio.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true

# --- Platform specific dependencies ---
# Unix
[target.'cfg(unix)'.dependencies]
whoami = "1"
